--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ sudo: enable
 script: 
     - python3 yuxe.py -y https://www.youtube.com/watch?v=vteS1g7lkZk -t "tlist.txt"
 before_install:
+    - sudo add-apt-repository ppa:mc3man/trusty-media
     - sudo apt-get -qq update
+    - sudo apt-get dist-upgrade
     - sudo apt-get install -y ffmpeg
