--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
     - pip install -r requirements.txt
 sudo: enable
 script: 
-    - python3 yuxe.py -y https://www.youtube.com/watch?v=vteS1g7lkZk -t "tlist.txt"
+    - python3 yuxe.py --help
 before_install:
     - sudo add-apt-repository -y ppa:mc3man/trusty-media
     - sudo apt-get -qq update
